--- a/Brainfuck.Compiler/Brainfuck.Compiler.csproj
+++ b/Brainfuck.Compiler/Brainfuck.Compiler.csproj
@@ -4,15 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D8A69E26-F575-4BB6-9048-9FA37B2E4C60}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{B395FD05-0B1D-425F-B184-52B037D9A8B6}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BFCore</RootNamespace>
-    <AssemblyName>BFCore</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>Compiler</RootNamespace>
+    <AssemblyName>Compiler</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,7 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr4.Runtime">
-      <HintPath>_external\Antlr4.Runtime.dll</HintPath>
+      <HintPath>..\_external\Antlr4.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,14 +51,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ANTLR\BrainfuckOptimized\BrainfuckOptimizedBaseListener.cs" />
-    <Compile Include="ANTLR\BrainfuckOptimized\BrainfuckOptimizedLexer.cs" />
-    <Compile Include="ANTLR\BrainfuckOptimized\BrainfuckOptimizedListener.cs" />
-    <Compile Include="ANTLR\BrainfuckOptimized\BrainfuckOptimizedParser.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Generators\Generator.cs" />
+    <Compile Include="Generators\GeneratorSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Grammars\BrainfuckOptimized.g4" />
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Brainfuck.Antlr\Brainfuck.Antlr.csproj">
+      <Project>{d8a69e26-f575-4bb6-9048-9fa37b2e4c60}</Project>
+      <Name>Brainfuck.Antlr</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
